; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_common.c_ice_get_caps.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/ice/extr_ice_common.c_ice_get_caps.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ice_hw = type { i32 }

@ice_aqc_opc_list_dev_caps = common dso_local global i32 0, align 4
@ice_aqc_opc_list_func_caps = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ice_get_caps(%struct.ice_hw* %0) #0 {
  %2 = alloca %struct.ice_hw*, align 8
  %3 = alloca i32, align 4
  store %struct.ice_hw* %0, %struct.ice_hw** %2, align 8
  %4 = load %struct.ice_hw*, %struct.ice_hw** %2, align 8
  %5 = load i32, i32* @ice_aqc_opc_list_dev_caps, align 4
  %6 = call i32 @ice_discover_caps(%struct.ice_hw* %4, i32 %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %13, label %9

9:                                                ; preds = %1
  %10 = load %struct.ice_hw*, %struct.ice_hw** %2, align 8
  %11 = load i32, i32* @ice_aqc_opc_list_func_caps, align 4
  %12 = call i32 @ice_discover_caps(%struct.ice_hw* %10, i32 %11)
  store i32 %12, i32* %3, align 4
  br label %13

13:                                               ; preds = %9, %1
  %14 = load i32, i32* %3, align 4
  ret i32 %14
}

declare dso_local i32 @ice_discover_caps(%struct.ice_hw*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
